Created RandomCalendar component

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-calendar-heatmap": "^1.6.2",
     "@types/styled-components": "^5.1.2"
   }
 }
